# cofounder-os

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_MASTER_OPERATING_CONTRACT.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
docs/: architecture-contract.md  deployment-workflow.md  development-guardrails.md  domain-model.md  evaluation-dashboard.md  executive-orchestrator.md  insurance-poc-demo.md  orchestration-service.md  product-api.md  state-management.md  traffic-liability-demo.md  workflow-controller.md
examples/: traffic-liability-demo-case.json
scripts/: build_insurance_poc_fixtures.py  create-stage-backup.sh  deploy-to-spark.sh  project-preflight.sh  rollback-product.sh  run_gateway.sh  run_insurance_poc_evaluation.py  seed_traffic_liability_demo.py  smoke-product.sh  smoke_test.sh  verify-three-plane.sh
tasks/: D06_PRODUCT_AGENT.md  D07_D10_MVP.md  D11_PRODUCT_API.md  D12_FOUNDER_MISSION_CONTROL_UI.md  D13_EVALUATION_DASHBOARD.md  D14_HACKATHON_SUBMISSION.md  D15_LIVE_AGENTS_ADAPTIVE_ROUTER.md
tests/: conftest.py  test_agent_registry.py  test_artifact_synthesizer.py  test_artifacts.py  test_audit.py  test_chat.py  test_config.py  test_domain_models.py  test_evaluation.py  test_execution_service.py  test_executive_orchestrator.py  test_finance_agent.py  test_gateway_client.py  test_gov_scripts.sh  test_health.py  test_insurance_poc_demo_evaluation.py  test_insurance_poc_evidence.py  test_insurance_poc_fixtures.py  test_insurance_poc_live_agents.py  test_insurance_poc_routing.py  test_insurance_poc_workflow.py  test_models.py  (+11 more)
(+80 files in other folders)
